src/Parallelize/ParallelizeParser.py
# Generated from /home/jon/PycharmProjects/4tb3-loop-parser/src/Parallelize/Parallelize.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class ParallelizeParser ( Parser ):

    grammarFileName = "Parallelize.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#'", "'('", "')'", "'{'", "';'", "'}'", 
                     "'['", "']'", "'for'", "<INVALID>", "<INVALID>", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "FOR", "TYPE", "COMPARE", "ASSIGNMENT", 
                      "INC_DEC", "OP", "STRING_LITERAL", "CHAR", "INTEGER", 
                      "FLOAT_LITERAL", "DOUBLE_LITERAL", "IDENT", "WS" ]

    RULE_program = 0
    RULE_for_loop = 1
    RULE_for_loop_header = 2
    RULE_statement = 3
    RULE_declaration = 4
    RULE_assignment = 5
    RULE_self_assignment = 6
    RULE_rhs = 7
    RULE_literal = 8
    RULE_variable = 9

    ruleNames =  [ "program", "for_loop", "for_loop_header", "statement", 
                   "declaration", "assignment", "self_assignment", "rhs", 
                   "literal", "variable" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    FOR=9
    TYPE=10
    COMPARE=11
    ASSIGNMENT=12
    INC_DEC=13
    OP=14
    STRING_LITERAL=15
    CHAR=16
    INTEGER=17
    FLOAT_LITERAL=18
    DOUBLE_LITERAL=19
    IDENT=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ParallelizeParser.EOF, 0)

        def for_loop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParallelizeParser.For_loopContext)
            else:
                return self.getTypedRuleContext(ParallelizeParser.For_loopContext,i)


        def getRuleIndex(self):
            return ParallelizeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ParallelizeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 22
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 20
                        self.match(ParallelizeParser.T__0)
                        pass

                    elif la_ == 2:
                        self.state = 21
                        self.matchWildcard()
                        pass

             
                self.state = 26
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ParallelizeParser.FOR:
                self.state = 27
                self.for_loop()
                self.state = 31
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 28
                        self.matchWildcard() 
                    self.state = 33
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(ParallelizeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_loopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(ParallelizeParser.FOR, 0)

        def for_loop_header(self):
            return self.getTypedRuleContext(ParallelizeParser.For_loop_headerContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParallelizeParser.StatementContext)
            else:
                return self.getTypedRuleContext(ParallelizeParser.StatementContext,i)


        def getRuleIndex(self):
            return ParallelizeParser.RULE_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop" ):
                listener.enterFor_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop" ):
                listener.exitFor_loop(self)




    def for_loop(self):

        localctx = ParallelizeParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_for_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(ParallelizeParser.FOR)
            self.state = 42
            self.match(ParallelizeParser.T__1)
            self.state = 43
            self.for_loop_header()
            self.state = 44
            self.match(ParallelizeParser.T__2)
            self.state = 45
            self.match(ParallelizeParser.T__3)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ParallelizeParser.TYPE or _la==ParallelizeParser.IDENT:
                self.state = 46
                self.statement()
                self.state = 47
                self.match(ParallelizeParser.T__4)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(ParallelizeParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_loop_headerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(ParallelizeParser.AssignmentContext,0)


        def statement(self):
            return self.getTypedRuleContext(ParallelizeParser.StatementContext,0)


        def getRuleIndex(self):
            return ParallelizeParser.RULE_for_loop_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop_header" ):
                listener.enterFor_loop_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop_header" ):
                listener.exitFor_loop_header(self)




    def for_loop_header(self):

        localctx = ParallelizeParser.For_loop_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_for_loop_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.assignment()
            self.state = 57
            self.match(ParallelizeParser.T__4)
            self.state = 61
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 58
                    self.matchWildcard() 
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 64
            self.match(ParallelizeParser.T__4)
            self.state = 65
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(ParallelizeParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(ParallelizeParser.AssignmentContext,0)


        def self_assignment(self):
            return self.getTypedRuleContext(ParallelizeParser.Self_assignmentContext,0)


        def getRuleIndex(self):
            return ParallelizeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = ParallelizeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.self_assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(ParallelizeParser.TYPE, 0)

        def variable(self):
            return self.getTypedRuleContext(ParallelizeParser.VariableContext,0)


        def getRuleIndex(self):
            return ParallelizeParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = ParallelizeParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(ParallelizeParser.TYPE)
            self.state = 73
            self.variable()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.lhs = None # VariableContext

        def ASSIGNMENT(self):
            return self.getToken(ParallelizeParser.ASSIGNMENT, 0)

        def rhs(self):
            return self.getTypedRuleContext(ParallelizeParser.RhsContext,0)


        def declaration(self):
            return self.getTypedRuleContext(ParallelizeParser.DeclarationContext,0)


        def variable(self):
            return self.getTypedRuleContext(ParallelizeParser.VariableContext,0)


        def getRuleIndex(self):
            return ParallelizeParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = ParallelizeParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ParallelizeParser.TYPE]:
                self.state = 75
                self.declaration()
                pass
            elif token in [ParallelizeParser.IDENT]:
                self.state = 76
                localctx.lhs = self.variable()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 79
            self.match(ParallelizeParser.ASSIGNMENT)
            self.state = 80
            self.rhs()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Self_assignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(ParallelizeParser.VariableContext,0)


        def OP(self):
            return self.getToken(ParallelizeParser.OP, 0)

        def ASSIGNMENT(self):
            return self.getToken(ParallelizeParser.ASSIGNMENT, 0)

        def rhs(self):
            return self.getTypedRuleContext(ParallelizeParser.RhsContext,0)


        def INC_DEC(self):
            return self.getToken(ParallelizeParser.INC_DEC, 0)

        def getRuleIndex(self):
            return ParallelizeParser.RULE_self_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelf_assignment" ):
                listener.enterSelf_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelf_assignment" ):
                listener.exitSelf_assignment(self)




    def self_assignment(self):

        localctx = ParallelizeParser.Self_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_self_assignment)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.variable()
                self.state = 83
                self.match(ParallelizeParser.OP)
                self.state = 84
                self.match(ParallelizeParser.ASSIGNMENT)
                self.state = 85
                self.rhs()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.variable()
                self.state = 88
                self.match(ParallelizeParser.INC_DEC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RhsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParallelizeParser.LiteralContext)
            else:
                return self.getTypedRuleContext(ParallelizeParser.LiteralContext,i)


        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParallelizeParser.VariableContext)
            else:
                return self.getTypedRuleContext(ParallelizeParser.VariableContext,i)


        def OP(self, i:int=None):
            if i is None:
                return self.getTokens(ParallelizeParser.OP)
            else:
                return self.getToken(ParallelizeParser.OP, i)

        def getRuleIndex(self):
            return ParallelizeParser.RULE_rhs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRhs" ):
                listener.enterRhs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRhs" ):
                listener.exitRhs(self)




    def rhs(self):

        localctx = ParallelizeParser.RhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rhs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ParallelizeParser.STRING_LITERAL, ParallelizeParser.INTEGER, ParallelizeParser.FLOAT_LITERAL, ParallelizeParser.DOUBLE_LITERAL]:
                self.state = 92
                self.literal()
                pass
            elif token in [ParallelizeParser.IDENT]:
                self.state = 93
                self.variable()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ParallelizeParser.OP:
                self.state = 96
                self.match(ParallelizeParser.OP)
                self.state = 99
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ParallelizeParser.STRING_LITERAL, ParallelizeParser.INTEGER, ParallelizeParser.FLOAT_LITERAL, ParallelizeParser.DOUBLE_LITERAL]:
                    self.state = 97
                    self.literal()
                    pass
                elif token in [ParallelizeParser.IDENT]:
                    self.state = 98
                    self.variable()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(ParallelizeParser.STRING_LITERAL, 0)

        def FLOAT_LITERAL(self):
            return self.getToken(ParallelizeParser.FLOAT_LITERAL, 0)

        def DOUBLE_LITERAL(self):
            return self.getToken(ParallelizeParser.DOUBLE_LITERAL, 0)

        def INTEGER(self):
            return self.getToken(ParallelizeParser.INTEGER, 0)

        def getRuleIndex(self):
            return ParallelizeParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = ParallelizeParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ParallelizeParser.STRING_LITERAL) | (1 << ParallelizeParser.INTEGER) | (1 << ParallelizeParser.FLOAT_LITERAL) | (1 << ParallelizeParser.DOUBLE_LITERAL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.simple = None # Token

        def IDENT(self):
            return self.getToken(ParallelizeParser.IDENT, 0)

        def rhs(self):
            return self.getTypedRuleContext(ParallelizeParser.RhsContext,0)


        def getRuleIndex(self):
            return ParallelizeParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = ParallelizeParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variable)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(ParallelizeParser.IDENT)
                self.state = 109
                self.match(ParallelizeParser.T__6)
                self.state = 110
                self.rhs()
                self.state = 111
                self.match(ParallelizeParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                localctx.simple = self.match(ParallelizeParser.IDENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





